--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -98,4 +98,13 @@ footer {
   }
 }
 
+.list-group {
+  flex-wrap: wrap;
+  .list-group-item {
+    width: 120px;
+    border: none;
+    text-align: center;
+  }
+}
+
 
