--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -45,8 +45,14 @@ footer {
   .lead {
     font-size: 24px;
     font-weight: bold;
-    line-height: 2;
+    line-height: 1.5;
     color: #212121;
+    margin-bottom: 0;
+  }
+  .sub {
+    color: #999;
+    font-style: italic;
+    text-align: center;
   }
 }
 
@@ -105,6 +111,10 @@ footer {
     border: none;
     text-align: center;
   }
+}
+
+.user-delete-form {
+  display: inline;
 }
 
 
